@@ -34,12 +34,10 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .cors()
+                .and()
                 .csrf().disable()
                 .authorizeRequests() // Cambiado de authorizeHttpRequests a authorizeRequests
-                .antMatchers(HttpMethod.OPTIONS, "/**").permitAll() // ← CLAVE: Permite OPTIONS
-                .antMatchers(HttpMethod.POST, "/**").permitAll() // ← CLAVE: Permite OPTIONS
-                .antMatchers(HttpMethod.GET, "/**").permitAll() // ← CLAVE: Permite OPTIONS
                 .antMatchers("/auth/login").permitAll() // Permitir acceso sin token al endpoint de login
                 .anyRequest().authenticated() // Requerir autenticación para otros endpoints
                 .and()
@@ -61,7 +59,7 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:3000",frontendUrl)); // Usar la propiedad parametrizada
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
         return new UrlBasedCorsConfigurationSource() {{
             registerCorsConfiguration("/**", configuration);
